--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,9 +36,11 @@
     <string name="next">Next</string>
     <string name="previous">Previous</string>
     //--------------------Actividades de alarma------------>
-    <string name="add">add</string>
-    <string name="cancel">cancel</string>
+    <string name="add">Añadir Recordatorio</string>
+    <string name="cancel">cancelar</string>
     <string name="title_activity_maps">MapsActivity</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
 </resources>
